--- a/apps/jwchat.html
+++ b/apps/jwchat.html
@@ -1,10 +1,10 @@
 <!--
  * @Author            : Bian <389701057@qq.com>
- * @Date              : 2025-06-24 00:19:41
+ * @Date              : 2025-11-20 11:23:55
  * @LastEditors       : LJIG <389701057@qq.com>
- * @LastEditTime      : 2025-11-20 11:41:14
- * @FilePath          : /apps/index.html
- * @Description       : 
+ * @LastEditTime      : 2025-11-20 11:42:30
+ * @FilePath          : /apps/jwchat.html
+ * @Description       : 测试引入本地文件
  * Copyright (c) 2025 by Bian <389701057@qq.com>, All Rights Reserved. 
 -->
 
@@ -15,7 +15,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JwChat Doc</title>
+  <script src="public/dist/index.full.min.js"></script>
+  <title>引入本地文件</title>
 </head>
 
 <body>
